* grub-core/bus/usb/ehci.c (grub_ehci_fini_hw): Ignore errors, not 	much we can do about it anyway.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-04-12  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/bus/usb/ehci.c (grub_ehci_fini_hw): Ignore errors, not
+	much we can do about it anyway.
+
 2013-04-12  Aleš Nesrsta  <starous@volny.cz>
 
 	Fix handling of split transfers.
