--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-04-12  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* util/grub-mkrescue.in: Fix wrong architecture for ppc dir.
+
+2013-04-12  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Better support Apple Intel Macs on CD.
 
 2013-04-12  Vladimir Serbinenko  <phcoder@gmail.com>
