--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-04-13  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	Fix memory leaks in ofnet.
+	Reported by: Francesco Lavra.
+
 2013-04-12  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* docs/man/grub-glue-efi.h2m: Add missing file.
