--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-04-15  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* tests/grub_cmd_date.in: Skip on sparc64.
+
+2013-04-15  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* tests/grub_script_expansion.in: Use fixed-string grep to skip over
 	firmware error messages.
 
