--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-04-16  Andrey Borzenkov <arvidjaar@gmail.com>
+
+	* autogen.sh: Use "-f" in addition for "-h" when checking file presence.
+
 2013-04-15  Vladimir Serbinenko  <phcoder@gmail.com>
 2013-04-15  Peter Jones <pjones@redhat.com>
 
