--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-04-17  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* build-aux/snippet: Add missing gnulib files.
+
 2013-04-16  Andrey Borzenkov <arvidjaar@gmail.com>
 
 	* grub-core/disk/efi/efidisk.c: Really limit transfer chunk size.
