--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	Make check work on mips-arc.
+
+2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* util/grub-mkrescue.in: Alias sashARCS as sash.
 
 2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>
