--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* util/grub-mkrescue.in: Rename i386-ieee1275 core image due to
+	ofw limited ISO support.
+
+2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* configure.ac: Fix loongson conditional.
 
 2013-04-25  Vladimir Serbinenko  <phcoder@gmail.com>
