--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/Makefile.core.def: Fix grub-emu and grub-emu-lite sources.
+
+2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* util/getroot.c (exec_pipe): Put proper #if's so that its users don't
 	compile when not needed.
 
