--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/term/morse.c: Macroify dih and dah.
+
 2013-04-27  Paulo Flabiano Smorigo <pfsmorigo@br.ibm.com>
 
 	* include/grub/macho.h: Set GRUB_MACHO_FAT_EFI_MAGIC as unsigned.
