--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* docs/grub.texi: Add a comment about usefullness of nativedisk.
+
+2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/commands/nativedisk.c: Ignore unknown filesystem error.
 
 2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>
