* include/grub/list.h (FOR_LIST_ELEMENTS_SAFE):Fix a NULL pointer 	dereference. 	Reported by: qwertial.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2013-04-29  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* include/grub/list.h (FOR_LIST_ELEMENTS_SAFE):Fix a NULL pointer
+	dereference.
+	Reported by: qwertial.
+
+2013-04-29  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/kern/mips/arc/init.c: Fix prefix detection.
 
 2013-04-29  Vladimir Serbinenko  <phcoder@gmail.com>
