--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-04-29  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	Unify more code in grub-install_header.
+
+2013-04-29  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Add few new tests.
 
 2013-04-29  Vladimir Serbinenko  <phcoder@gmail.com>
