--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2013-04-29 Vladimir Testov <vladimir.testov@rosalab.ru>
+
+	* grub-core/gfxmenu/gui_list.c: Refresh first_shown_entry value when
+	cached view is reused.
+	* grub-core/gfxmenu/view.c: Call the refresh procedure for all
+	open boot menus.
+
 2013-04-29  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	Unify more code in grub-install_header.
