--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-04-29  Vladimir Testov <vladimir.testov@rosalab.ru>
+
+	* grub-core/gfxmenu/circular_progress.c: Set start_angle in degrees
+	with syntax "XXX deg"/"XXX °".
+
 2013-04-29  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	Make PCI init in i386-qemu port more robust.
