--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-04-29  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* configure.ac: Use -mcmodel=large on x86_64-emu as well.
+	Reported by: qwertial.
+
 2013-04-29  Vladimir Testov <vladimir.testov@rosalab.ru>
 
 	* grub-core/gfxmenu/circular_progress.c: Set start_angle in degrees
