--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-05-02  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	First automated video test (running videotest and comparing results)
+
+2013-05-02  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/commands/videotest.c: Reduce flickering and draw 6 squares
 	instead of 2 to have full RGB/CMY test pattern.
 
