--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-05-02  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/loader/i386/linux.c (grub_linux_setup_video): Add
+	GRUB_VIDEO_ADAPTER_CAPTURE: to handled drived ids.
+
+2013-05-02  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	First automated video test (running videotest and comparing results)
 
 2013-05-02  Vladimir Serbinenko  <phcoder@gmail.com>
