Add missing exports on mips.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-05-02  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	Add missing exports on mips.
+
+2013-05-02  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/tests/videotest_checksum.c (videotest_checksum): Error out
 	if no unifont is found.
 	Restore original keyboard.
